--- a/backend/package.json
+++ b/backend/package.json
@@ -14,11 +14,13 @@
         "bcryptjs": "^2.4.3",
         "body-parser": "^1.20.2",
         "cloudinary": "^2.4.0",
+        "cors": "^2.8.5",
         "dotenv": "^16.4.5",
         "express": "^4.19.2",
         "jsonwebtoken": "^9.0.2",
         "mongoose": "^8.5.3",
         "multer": "^1.4.5-lts.1",
+        "redis": "^4.7.0",
         "socket.io": "^4.7.5",
         "winston": "^3.14.2"
     },
