--- a/backend/package.json
+++ b/backend/package.json
@@ -26,6 +26,7 @@
         "nodemailer": "^6.9.14",
         "redis": "^4.7.0",
         "socket.io": "^4.7.5",
+        "speakeasy": "^2.0.0",
         "winston": "^3.14.2"
     },
     "bundleDependencies": [
