--- a/backend/package.json
+++ b/backend/package.json
@@ -24,6 +24,8 @@
         "mongoose": "^8.5.3",
         "multer": "^1.4.5-lts.1",
         "nodemailer": "^6.9.14",
+        "passport": "^0.7.0",
+        "passport-google-oauth20": "^2.0.0",
         "redis": "^4.7.0",
         "socket.io": "^4.7.5",
         "speakeasy": "^2.0.0",
