--- a/frontend/package.json
+++ b/frontend/package.json
@@ -39,6 +39,7 @@
     "react-hook-form": "^7.53.0",
     "react-icons": "^5.3.0",
     "react-jwt": "^1.2.2",
+    "react-markdown": "^9.0.1",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.26.2",
     "react-swipeable": "^7.0.1",
