--- a/frontend/package.json
+++ b/frontend/package.json
@@ -40,6 +40,7 @@
     "input-otp": "^1.2.4",
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.451.0",
+    "peerjs": "^1.5.4",
     "qrcode.react": "^4.0.1",
     "react": "^18.3.1",
     "react-animated-numbers": "^0.18.0",
