--- a/flask_app/requirements.txt
+++ b/flask_app/requirements.txt
@@ -13,6 +13,7 @@ distro==1.9.0
 dnspython==2.7.0
 exceptiongroup==1.2.2
 Flask==3.0.3
+Flask-Cors==5.0.0
 Flask-SQLAlchemy==3.1.1
 frozenlist==1.5.0
 greenlet==3.1.1
