--- a/frontend/package.json
+++ b/frontend/package.json
@@ -69,7 +69,8 @@
     "tailwind-merge": "^2.5.3",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.23.8",
-    "zustand": "^5.0.0-rc.2"
+    "zustand": "^5.0.0-rc.2",
+    "vite": "^5.4.8"
   },
   "devDependencies": {
     "@eslint/js": "^9.11.1",
