feat(flask): Implement violence detection feature chore(docker): Add Dockerfile for backend, Flask app, and frontend fix(message): Remove unnecessary API call in message handler fix(comment): Prevent dialog from closing if comment fails to post

--- a/backend/package.json
+++ b/backend/package.json
@@ -3,10 +3,13 @@
     "version": "1.0.0",
     "main": "server.js",
     "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1",
-        "start": "node --watch server",
+        "test": "echo \"Error: no test specified\" && exit 1", 
+        "start": "node dist/index.js",
+        "build": "webpack",
+        "prod": "node dist/final.js",
         "eslint": "eslint ./",
-        "eslint-fix": "eslint ./ --fix"
+        "eslint-fix": "eslint ./ --fix",
+        "dev": "webpack serve --mode development"
     },
     "author": "Dương Ngọc Anh",
     "license": "MIT",
