--- a/backend/package.json
+++ b/backend/package.json
@@ -3,7 +3,7 @@
     "version": "1.0.0",
     "main": "server.js",
     "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1", 
+        "test": "echo \"Error: no test specified\" && exit 1",
         "start": "node dist/index.js",
         "build": "webpack",
         "prod": "node dist/final.js",
@@ -46,5 +46,16 @@
         "globals": "^15.12.0",
         "webpack": "^5.96.1",
         "webpack-cli": "^5.1.4"
+    },
+    "optionalDependencies": {
+        "@aws-sdk/credential-providers": "*",
+        "@mongodb-js/zstd": "^1.2.2",
+        "aws4": "^1.13.2",
+        "bufferutil": "*",
+        "kerberos": "*",
+        "mongodb-client-encryption": "*",
+        "snappy": "^7.2.2",
+        "socks": "^2.8.3",
+        "utf-8-validate": "*"
     }
 }
