--- a/backend/package.json
+++ b/backend/package.json
@@ -35,6 +35,7 @@
         "redis": "^4.7.0",
         "socket.io": "^4.7.5",
         "speakeasy": "^2.0.0",
+        "webpack-node-externals": "^3.0.0",
         "winston": "^3.14.2"
     },
     "bundleDependencies": [
@@ -42,8 +43,10 @@
     ],
     "devDependencies": {
         "@eslint/js": "^9.15.0",
+        "copy-webpack-plugin": "^12.0.2",
         "eslint": "^9.15.0",
         "globals": "^15.12.0",
+        "node-loader": "^2.1.0",
         "webpack": "^5.96.1",
         "webpack-cli": "^5.1.4"
     },
